Upgrade our project version